fix: horizontal scroll on train page

--- a/src/app/pages/train/components/train-button/train-button.component.scss
+++ b/src/app/pages/train/components/train-button/train-button.component.scss
@@ -1,7 +1,6 @@
 :host {
   display: block;
   position: relative;
-  width: 100%;
 
   .exercise-button ::ng-deep .mat-button-wrapper {
     position: relative;
